refactor 90% completed